2011-10-10  Jason Ryan  <jasonwryan@gmail.com>

	* New elvi: pin (search pinboard.in).

2011-09-09  Kyle Isom  <coder@kyleisom.net>

        * New elvi: wolfram - query Wolfram Alpha
        * Author: Kyle Isom <coder@kyleisom.net>
        * Added test for wolfram.

2011-08-09  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: priberam - search Portuguese dictionary.
	  Author: Paulo Almeida <paulo@diasalmeida.com>
	* Added test for priberam.

2011-07-11  Ian Beckwith  <ianb@erislabs.net>

	* netbsd: fix normal & mail search.
	  google custom searches were complaining I was a bot, so I
	  switched to normal google searches with
	  site:{mail-index,}.netbsd.org.
	* cia: fix search URL

2011-06-17  Ian Beckwith  <ianb@erislabs.net>

	* arxiv: fix -scope=author with single-word queries.
	  Thanks to Nikos Apostolakis.
	* btw, note about entry below, netbsd make *does*
	  support '$<', but only in suffix rules.

2011-06-16  Ian Beckwith  <ianb@erislabs.net>

	* Fix more make(1) portability problems.
	  Either I am horribly confused or netbsd make
	  (or at least pmake in debian) doesn't support '$<'.
	  Switched to '$?'.
	* Also switched submit-lsm rule to '$?'.
	  Thanks to Kyle Isom.
	* Removed long-obsolete commented-out sourceforge upload rules.

2011-06-15  Ian Beckwith  <ianb@erislabs.net>

	* scitopia, worldwidescience: fixed URLs.
	* Fixed make portability problems.
	  We cannot portably combine single suffix rules (foo.IN->foo)
	  and separated dependencies so we have to explicitly specify
	  all the .IN rules. The solution we used for this until now was
	  specific to GNU make.
	* Removed Makefile.include, no longer used.
	* './configure --enable-opensearch' now only controls
	  installation of the (direct) dependencies for opensearch,
	  not opensearch itself, as opensearch now falls back to
	  using a remote reflector if opensearch-discover(1)
	  and opensearch-genquery(1) aren't found.
	* yandex: fix test.

2011-06-14  Ian Beckwith  <ianb@erislabs.net>
