@@ -1,3 +1,4 @@
+*~
 Makefile
 build-stamp
 config.log
