@@ -126,6 +126,9 @@ Sara Fauzia <sara@archlinux.us>
 Paulo Almeida <paulo@diasalmeida.com>
         elvi: priberam
 
+Shain Singh <shain.singh@gmail.com>
+        elvi: cisco, f5 
+
 THANKS TO
 
 Brian Nelson           <bnelson@bloodclot.net>
