@@ -1,0 +1,24 @@
+#!/bin/sh
+# $Id$
+# elvis: cisco		-- Search Cisco documentation (www.cisco.com)
+
+. surfraw || exit 1
+
+w3_usage_hook () {
+    cat <<EOF
+Usage: $w3_argv0 [options] [search words]...
+Description:
+Surfraw search Cisco documentation (www.cisco.com)
+EOF
+    w3_global_usage
+}
+
+w3_config
+w3_parse_args "$@"
+# w3_args now contains a list of arguments
+if test -z "$w3_args"; then
+    w3_browse_url "http://tools.cisco.com/"
+else
+    escaped_args=`w3_url_of_arg $w3_args`
+    w3_browse_url "http://tools.cisco.com/search/JSP/search-results.get?isFormSubmit=true&strQueryText=${escaped_args}"
+fi
