@@ -1,3 +1,7 @@
+2011-10-10  Shain Singh <shain.singh@gmail.com>
+
+	* New elvi: f5, cisco
+
 2011-10-10  Jason Ryan  <jasonwryan@gmail.com>
 
 	* New elvi: pin (search pinboard.in).
